--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
 <body>
 <main>
     <h1>ToDo </h1>
- <% console.log("in ejs",todos) %> 
+    <% //  console.log("in ejs",todos)
+    %>
     
 <% if (todos && todos.length > 0) { %>
   <ul>
